--- a/Implementação/labdev-spring/src/main/resources/templates/clientes/index.html
+++ b/Implementação/labdev-spring/src/main/resources/templates/clientes/index.html
@@ -1,46 +1,63 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-spring4-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
-<head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
- <title>Lista de Clientes</title>
- <link rel="stylesheet" th:href="@{/css/clientes.css}">
-</head>
-<body>
- <h2>Lista de Clientes</h2>
- <table>
-     <thead>
-         <tr>
-             <th>ID</th>
-             <th>Nome</th>
-             <th>CPF</th>
-             <th>RG</th>
-             <th>Endereço</th>
-             <th>Profissão</th>
-             <th>Empregadora</th>
-             <th>Salário</th>
-             <th>Ações</th>
-         </tr>
-     </thead>
-     <tbody>
-         <tr th:each="cliente : ${clientes}">
-             <td th:text="${cliente.id}">1</td>
-             <td th:text="${cliente.nome}">Maria Oliveira</td>
-             <td th:text="${cliente.cpf}">123456789</td>
-             <td th:text="${cliente.rg}">12345678900</td>
-             <td th:text="${cliente.endereco}">Avenida Central, 456</td>
-             <td th:text="${cliente.profissao}">Médica</td>
-             <td th:text="${cliente.empregadora}">Hospital Vida</td>
-             <td th:text="${cliente.rendimentos}">R$ 12000.00</td>
-             <td>
-                 <a href="#">Detalhes</a> |
-                 <a href="#">Editar</a> |
-                 <a href="" class="delete">Deletar</a>
-             </td>
-         </tr>
-     </tbody>
- </table>
- <a href="/clientes/cadastrar" class="new-professor">Novo Cliente</a>
-</body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lista de Clientes</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.5/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-SgOJa3DmI69IUzQ2PVdRZhwQ+dy64/BUtbMJw1MZ8t5HZApcHrRKUc4W0kG879m7" crossorigin="anonymous">
+    <link rel="stylesheet" th:href="@{/css/clientes.css}" />
+    
+  </head>
+  <body>
+    <header>
+      <div class="container-nav">
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/clientes">Clientes</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#">Pedidos</a>
+          </li>
+        </ul>
+      </div>
+    </header>
+    <div container-table>
+      <h2>Lista de Clientes</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>ID</th>
+            <th>Nome</th>
+            <th>CPF</th>
+            <th>RG</th>
+            <th>Endereço</th>
+            <th>Profissão</th>
+            <th>Empregadora</th>
+            <th>Salário</th>
+            <th>Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr th:each="cliente : ${clientes}">
+            <td th:text="${cliente.id}">1</td>
+            <td th:text="${cliente.nome}">Maria Oliveira</td>
+            <td th:text="${cliente.cpf}">123456789</td>
+            <td th:text="${cliente.rg}">12345678900</td>
+            <td th:text="${cliente.endereco}">Avenida Central, 456</td>
+            <td th:text="${cliente.profissao}">Médica</td>
+            <td th:text="${cliente.empregadora}">Hospital Vida</td>
+            <td th:text="${cliente.rendimentos}">R$ 12000.00</td>
+            <td>
+              <a th:href="@{/clientes/{clienteId}(clienteId = ${cliente.id})}">Detalhes</a> | <a th:href="@{/clientes/{clienteId}/editar(clienteId = ${cliente.id})}">Editar</a> |
+              <a th:href="@{/clientes/{clienteId}/deletar(clienteId = ${cliente.id})}" class="delete">Deletar</a>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <a href="/clientes/cadastrar" class="new-professor">Novo Cliente</a>
+  </body>
 </html>
