--- a/Implementação/labdev-spring/src/main/resources/static/css/editar.css
+++ b/Implementação/labdev-spring/src/main/resources/static/css/editar.css
@@ -6,26 +6,33 @@ body {
 }
 
 header {
- padding: 15px 0;
- color: white;
+ background-color: #212529;
+ padding: 15px 30px;
 }
 
 .nav {
  display: flex;
- justify-content: center;
+ align-items: center;
  list-style: none;
+ margin: 0;
  padding: 0;
+}
+
+.nav li {
+ margin-right: 20px;
 }
 
 .nav-link {
  color: white;
  text-decoration: none;
- margin: 0 15px;
  font-weight: bold;
+ font-size: 1rem;
+ transition: color 0.3s ease;
 }
 
 .nav-link:hover {
- text-decoration: underline;
+ color: #ccc;
+ text-decoration: none;
 }
 
 .container {
@@ -38,7 +45,7 @@ header {
 }
 
 h1 {
- color: #91302C;
+ color: black;
  margin-bottom: 25px;
  text-align: center;
 }
@@ -77,4 +84,60 @@ button[type="submit"] {
 
 button[type="submit"]:hover {
  background-color: #0056b3;
+}
+
+.button-group {
+ display: flex;
+ justify-content: space-between;
+ margin-top: 25px;
+}
+
+.button-group button,
+.button-group .cancel-button {
+ padding: 12px 24px;
+ font-size: 1rem;
+ border-radius: 8px;
+ border: none;
+ cursor: pointer;
+ text-align: center;
+ text-decoration: none;
+}
+
+/* Botão Salvar */
+.button-group button {
+ background-color: #007BFF;
+ color: white;
+ transition: background-color 0.3s ease;
+}
+
+.button-group button:hover {
+ background-color: #0056b3;
+}
+
+/* Botão Cancelar */
+.button-group .cancel-button {
+ background-color: #6c757d;
+ color: white;
+ transition: background-color 0.3s ease;
+}
+
+.button-group .cancel-button:hover {
+ background-color: #5a6268;
+}
+
+
+.form-container {
+ max-width: 600px;
+ margin: 3rem auto;
+ padding: 2rem;
+ background-color: white;
+ border-radius: 15px;
+ box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.titulo-form {
+ color: black;
+ font-weight: bold;
+ text-align: center;
+ margin-bottom: 1.5rem;
 }
