--- a/Implementação/labdev-spring/src/main/resources/templates/clientes/home.html
+++ b/Implementação/labdev-spring/src/main/resources/templates/clientes/home.html
@@ -30,19 +30,13 @@
           <ul class="navbar-nav ms-auto">
             <li class="nav-item" sec:authorize="isAuthenticated()">
               <a class="nav-link" th:href="@{/perfil/exibirPerfil}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16">
-                  <path d="M11 10a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/>
-                  <path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 1 0 0 14A7 7 0 0 0 8 1z"/>
-                </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-person-circle" viewBox="0 0 16 16"><path d="M11 10a3 3 0 1 1-6 0 3 3 0 0 1 6 0z"/><path fill-rule="evenodd" d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8zm8-7a7 7 0 1 0 0 14A7 7 0 0 0 8 1z"/></svg>
                 Perfil
               </a>
             </li>
             <li class="nav-item" sec:authorize="!isAuthenticated()">
-              <a class="nav-link" th:href="@{/login}">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16">
-                  <path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h5A1.5 1.5 0 0 1 13 4.5v7a1.5 1.5 0 0 1-1.5 1.5h-5a.5.5 0 0 1 0-1h5a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 1-.5-.5z"/>
-                  <path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708L3.293 4.5a.5.5 0 1 1 .707.707L1.707 8l2.293 2.793a.5.5 0 0 1-.707.707L.146 8.354z"/>
-                </svg>
+              <a class="nav-link" th:href="@{/clientes/login}">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="white" class="bi bi-box-arrow-in-right" viewBox="0 0 16 16"><path fill-rule="evenodd" d="M6 3.5a.5.5 0 0 1 .5-.5h5A1.5 1.5 0 0 1 13 4.5v7a1.5 1.5 0 0 1-1.5 1.5h-5a.5.5 0 0 1 0-1h5a.5.5 0 0 0 .5-.5v-7a.5.5 0 0 0-.5-.5h-5a.5.5 0 0 1-.5-.5z"/><path fill-rule="evenodd" d="M.146 8.354a.5.5 0 0 1 0-.708L3.293 4.5a.5.5 0 1 1 .707.707L1.707 8l2.293 2.793a.5.5 0 0 1-.707.707L.146 8.354z"/></svg>
                 Login
               </a>
             </li>
